Overflow instagram section fixed / css js adjustments / card animation

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,31 +1,30 @@
 @mixin font($font: 'Montserrat') {
     font-family: $font;
 }
-/*
-html{
-    scroll-snap-type: y proximity;
+@mixin ColorBeige($type: "background-color"){
+    #{$type}: #DCC1AB;
+}
+@mixin ColorDarkGreen($type: "background-color"){
+    #{$type}: #1b5b31;
 }
 
-section, footer{
-    scroll-snap-align: end;
-}*/
-.navbar-nav{
-    
-    .nav-item{
-        padding-right: 40px;
-    }
-}
+@keyframes card-animation {
+    20%    { transform: rotate(0deg) scale(1.1); }
+    40%   { transform: rotate(5deg); }
+    70%   { transform: rotate(-5deg); }
+    100%  { transform: rotate(0deg) scale(1);}
+  }
 
-.font-1{
+.font-header{
     @include font();
 }
 
-.font-2{
+.font-main{
     font-family: 'Inter', sans-serif;
 }
 
 .description-tag{
-    padding-top: 50px;
+    padding-top: 40px;
     font-size: 12px;
 }  
 
@@ -37,10 +36,17 @@ section, footer{
     display: none;
 }
 
+.navbar-nav{
+    
+    .nav-item{
+        padding-right: 40px;
+    }
+}
+
 .main-section{
     min-height: calc(100vh - 72px);
     overflow: hidden;
-    background-color: #DCC1AB;
+    @include ColorBeige();
     .container{
         width: 100%;
     }
@@ -76,15 +82,15 @@ section, footer{
                 }
                 
                 .contact-btn{
-                    background-color: #1B5B31;
+                    @include ColorDarkGreen();
                 }
                 
                 .projects-btn{
                     border: solid 1px #1B5B31;
-                    color: #1B5B31;
+                    @include ColorDarkGreen('color');
                     margin-left: 36px;
                     &:hover{
-                        background-color: #1B5B31;
+                        @include ColorDarkGreen();
                         color: #fff
                     }
                 }
@@ -136,6 +142,7 @@ section, footer{
     }
     .card{
         border: none;
+        transform-style: preserve-3d;
         min-height: 364px;
         min-width: 250px;
         max-width: 378px;
@@ -143,7 +150,8 @@ section, footer{
         padding: 20px;
         cursor: pointer;
         &:hover{
-            background-color: #DCC1AB;
+            @include ColorBeige();
+            animation: card-animation 0.8s 1 linear;
             transition: all 0.4s;
         }
         img{
@@ -160,7 +168,7 @@ section, footer{
             padding-bottom: 60px;
         }
         a{
-            color: #1B5B31;
+            @include ColorDarkGreen('color');
         }
     }
 }
@@ -168,7 +176,7 @@ section, footer{
 .about-section{
     min-height: 100vh;
     overflow: hidden;
-    background-color: #1B5B31;
+    @include ColorDarkGreen();
 
     .img-section{
         float: none;
@@ -198,7 +206,7 @@ section, footer{
         color: #F5F0EC;
         border-color: #F5F0EC; 
         &:hover{
-            color: #1B5B31;
+            @include ColorDarkGreen('color');
             background-color: #F5F0EC;
         }
     } 
@@ -207,10 +215,9 @@ section, footer{
 
 
 .projects-section{
+    @include ColorBeige();
     overflow: hidden;
-    background-color: #DCC1AB;
     position: relative;
-    
     
     img{
         padding: 0;
@@ -220,8 +227,8 @@ section, footer{
         margin-left: 160px
     }
     .masonry-div{
-    max-height: 200vh;
-    }   
+        max-height: 200vh;
+    }
     .more-div{
         position: absolute;
         bottom: 0;
@@ -285,7 +292,6 @@ section, footer{
     position: relative;
     .btn-div{
         position: absolute;
-        width: 100vw;
         top: -140px;
         z-index: 10;
         button{
@@ -293,11 +299,11 @@ section, footer{
         }
     }
     .bg-container{
-        background-color: #1B5B31;
+        @include ColorDarkGreen();
         .instagram-btn{
             border-radius: 40px;
             padding: 7px 25px;
-            color: #1B5B31;
+            @include ColorDarkGreen('color');
         }
     }
 }
@@ -313,21 +319,14 @@ footer{
     }
     
 }
-
-
-@media (max-width: 978px) {
-    .container {
-      padding:0;
-      margin:0;
-    }
-     
+@media (max-width: 764px){
     .main-section{
         .row{
             padding-left: 0px;
             .position-absolute{
                 top: 0;
                 right: 0;
-                opacity: 50%;
+                opacity: 60%;
                 color: #f2f2f2;
                 background-color: #000;
             }
@@ -338,6 +337,15 @@ footer{
             }
         }
     }
+}
+
+@media (max-width: 978px) {
+    .container {
+      padding:0;
+      margin:0;
+    }
+     
+    
     .main-section{
         .row{
             padding-left: 0px;
